<resources>
    <string name="app_name">BSNL FTTH Call history</string>
    <string name="contact_number">Contact Number</string>
    <string name="call_time">call time</string>
    <string name="call_status_icon">call status icon</string>
    <string name="duration">Duration</string>
    <string name="settings">Settings</string>
    <string name="router_admin_page">Router Admin Page</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
</resources>