<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="12sp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border_round_corner"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/router_admin_page"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_margin="8sp"/>

        <EditText
            android:id="@+id/edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginEnd="8sp"
            android:hint="@string/url"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/edit_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:drawableStart="@drawable/ic_check"
                android:drawableLeft="@drawable/ic_check"
                android:text="@string/apply" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>