<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="12sp"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border_round_corner"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12sp"
            android:layout_marginRight="12sp"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/duration_layout"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon_status"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="12sp"
            android:contentDescription="@string/call_status_icon"
            android:src="@drawable/ic_icon_call_incoming" />

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="10sp"
            android:layout_toEndOf="@id/icon_status"
            android:layout_toRightOf="@id/icon_status"
            android:text="@string/contact_number"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toLeftOf="@id/duration_layout"
            android:layout_toStartOf="@id/duration_layout"
            android:layout_marginEnd="8sp"
            android:layout_marginRight="8sp" />

        <TextView
            android:id="@+id/call_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_number"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="3sp"
            android:layout_toEndOf="@id/icon_status"
            android:layout_toRightOf="@id/icon_status"
            android:text="@string/call_time"
            android:layout_toLeftOf="@id/duration_layout"
            android:layout_toStartOf="@id/duration_layout"
            android:layout_marginEnd="8sp"
            android:layout_marginRight="8sp"
            android:layout_marginBottom="6sp"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>